sources/libClangSharp/ClangSharp.h

enum CX_InitializationStyle {
    CX_IS_Invalid,
    CX_IS_CInit = clang::VarDecl::CInit + 1,
    CX_IS_CallInit = clang::VarDecl::CallInit + 1,
    CX_IS_ListInit = clang::VarDecl::ListInit + 1,
    CX_IS_ParenListInit = clang::VarDecl::ParenListInit + 1,
};
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getInheritedConstructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getInheritedFromVBase(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getInitExpr(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getInitSuspendStmt(CXCursor C);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getInputConstraint(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getInputExpr(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CXString clangsharp_Cursor_getInputName(CXCursor C, unsigned i);
CLANGSHARP_LINKAGE CX_InitializationStyle clangsharp_Cursor_getInitStyle(CXCursor C);
CLANGSHARP_LINKAGE CXType clangsharp_Cursor_getInjectedSpecializationType(CXCursor C);
CLANGSHARP_LINKAGE CXCursor clangsharp_Cursor_getInstantiatedFromMember(CXCursor C);
CLANGSHARP_LINKAGE int64_t clangsharp_Cursor_getIntegerLiteralValue(CXCursor C);
CLANGSHARP_LINKAGE uint64_t clangsharp_Cursor_getUnsignedIntegerLiteralValue(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsAllEnumCasesCovered(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsAlwaysNull(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsAnonymousStructOrUnion(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsArgumentType(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsArrayForm(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsArrayFormAsWritten(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsArrow(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsCBuffer(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsClassExtension(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsCompleteDefinition(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsConditionTrue(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsConstexpr(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsConversionFromLambda(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsCopyOrMoveConstructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsCXXTry(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsDefined(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsDelegatingConstructor(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsDeleted(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsDeprecated(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsElidable(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsExpandedParameterPack(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsExplicitlyDefaulted(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsExternC(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsFileScope(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsFixed(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsGlobal(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsInjectedClassName(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsIfExists(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsImplicit(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsAsmGoto(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsSimple(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsVolatile(CXCursor C);
CLANGSHARP_LINKAGE unsigned clangsharp_Cursor_getIsIncomplete(CXCursor C);