sources/ClangSharp.Interop/clangsharp/clangsharp.cs


    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInheritedConstructor", ExactSpelling = true)]
    public static extern CXCursor Cursor_getInheritedConstructor(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInheritedFromVBase", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getInheritedFromVBase(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInitExpr", ExactSpelling = true)]
    public static extern CXCursor Cursor_getInitExpr(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInitSuspendStmt", ExactSpelling = true)]
    public static extern CXCursor Cursor_getInitSuspendStmt(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInputConstraint", ExactSpelling = true)]
    public static extern CXString Cursor_getInputConstraint(CXCursor C, [NativeTypeName("unsigned int")] uint i);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInputExpr", ExactSpelling = true)]
    public static extern CXCursor Cursor_getInputExpr(CXCursor C, [NativeTypeName("unsigned int")] uint i);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInputName", ExactSpelling = true)]
    public static extern CXString Cursor_getInputName(CXCursor C, [NativeTypeName("unsigned int")] uint i);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInitStyle", ExactSpelling = true)]
    public static extern CX_InitializationStyle Cursor_getInitStyle(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInjectedSpecializationType", ExactSpelling = true)]
    public static extern CXType Cursor_getInjectedSpecializationType(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getInstantiatedFromMember", ExactSpelling = true)]
    public static extern CXCursor Cursor_getInstantiatedFromMember(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIntegerLiteralValue", ExactSpelling = true)]
    [return: NativeTypeName("int64_t")]
    public static extern long Cursor_getIntegerLiteralValue(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getUnsignedIntegerLiteralValue", ExactSpelling = true)]
    [return: NativeTypeName("uint64_t")]
    public static extern ulong Cursor_getUnsignedIntegerLiteralValue(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsAllEnumCasesCovered", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsAllEnumCasesCovered(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsAlwaysNull", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsAlwaysNull(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsAnonymousStructOrUnion", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsAnonymousStructOrUnion(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsArgumentType", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsArgumentType(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsArrayForm", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsArrayForm(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsArrayFormAsWritten", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsArrayFormAsWritten(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsArrow", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsArrow(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsCBuffer", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsCBuffer(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsClassExtension", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsClassExtension(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsCompleteDefinition", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsCompleteDefinition(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsConditionTrue", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsConditionTrue(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsConstexpr", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsConstexpr(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsConversionFromLambda", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsConversionFromLambda(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsCopyOrMoveConstructor", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsCopyOrMoveConstructor(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsCXXTry", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsCXXTry(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsDefined", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsDefined(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsDelegatingConstructor", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsDelegatingConstructor(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsDeleted", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsDeleted(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsDeprecated", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsDeprecated(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsElidable", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsElidable(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsExpandedParameterPack", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsExpandedParameterPack(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsExplicitlyDefaulted", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsExplicitlyDefaulted(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsExternC", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsExternC(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsFileScope", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsFileScope(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsFixed", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsFixed(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsGlobal", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsGlobal(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsInjectedClassName", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsInjectedClassName(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsIfExists", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsIfExists(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsImplicit", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsImplicit(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsAsmGoto", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsAsmGoto(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsSimple", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsSimple(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsVolatile", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsVolatile(CXCursor C);

    [DllImport("libClangSharp", CallingConvention = CallingConvention.Cdecl, EntryPoint = "clangsharp_Cursor_getIsIncomplete", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Cursor_getIsIncomplete(CXCursor C);
